--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* styles.css */
+/* Global Styles */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 * {
@@ -22,6 +22,7 @@ body {
     position: relative;
 }
 
+/* Header Styles */
 header {
     background-color: #ffcc00;
     color: #000;
@@ -51,7 +52,7 @@ header {
 }
 
 .logo {
-    max-width: 200px; /* Adjust as needed */
+    max-width: 200px;
     height: auto;
     display: block;
     margin: 0 auto;
@@ -79,6 +80,7 @@ nav ul li a:hover {
     color: #ff6600;
 }
 
+/* Menu Styles */
 .menu-container {
     display: flex;
     flex-direction: column;
@@ -97,43 +99,35 @@ nav ul li a:hover {
     margin-bottom: 20px;
     position: relative;
     overflow: hidden;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .menu-item img {
     width: 100%;
     height: auto;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
+    border-radius: 10px 10px 0 0; /* Rounded corners at the top */
+    object-fit: cover;
 }
 
 .menu-item-content {
-    background-color: #fff;
-    padding: 10px;
-    border-radius: 0 0 10px 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    bottom: -100%;
-    left: 0;
-    width: 100%;
-    transform: translateY(0);
-    transition: transform 0.3s ease;
-}
-
-.menu-item:hover .menu-item-content {
-    transform: translateY(-100%);
+    padding: 15px;
+    text-align: center;
 }
 
 .menu-item-content h3 {
-    margin-bottom: 5px;
-    font-size: 1.1rem;
+    margin-bottom: 10px;
+    font-size: 1.2rem;
+    color: #333;
 }
 
 .menu-item-content p {
-    font-size: 0.9rem;
+    font-size: 1rem;
     color: #666;
 }
 
+/* Menu Image Section */
 .menu-image {
     background-color: #fff;
     text-align: center;
@@ -147,6 +141,7 @@ nav ul li a:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+/* About Section */
 .about {
     background-color: #ff6600;
     color: #fff;
@@ -208,6 +203,7 @@ nav ul li a:hover {
     right: -50px;
 }
 
+/* Contact Section */
 .contact {
     padding: 60px 0;
     text-align: center;
@@ -258,6 +254,7 @@ nav ul li a:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+/* Footer */
 footer {
     background-color: #333;
     color: #fff;
@@ -288,7 +285,7 @@ footer {
 }
 
 .section-title {
-  font-size: 2.5rem;
-  margin-bottom: 30px;
-  text-align: center; /* Menengahkan teks secara horizontal */
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+    text-align: center;
 }
